# ESP32_S3-GPS_MINiMIX

./: ARCHITECTURE.md  CMakeLists.txt  DEV_NOTES.md  FLASH_GUIDE.md  README.md  Readme.md  UI_CONTROL.md  dev.md  partitions.csv  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  battery.c  config.h  display.c  gnss.c  idf_component.yml  input.c  main.c  main.cpp  sensors.c
main/app/: bike_computer_app.cpp  bike_computer_app.h  gps_logger_app.cpp  gps_logger_app.h  pbox_app.cpp  pbox_app.h
main/core/: calibration.cpp  calibration.h  gps_logger.cpp  gps_logger.h  rtc_manager.cpp  rtc_manager.h  sensor_fusion.cpp  sensor_fusion.h
main/hardware/: baro_driver.cpp  baro_driver.h  battery_monitor.cpp  battery_monitor.h  display_driver.cpp  display_driver.h  encoder_driver.cpp  encoder_driver.h  gnss_driver.cpp  gnss_driver.h  imu_driver.cpp  imu_driver.h  mag_driver.cpp  mag_driver.h  sdcard_driver.cpp  sdcard_driver.h
main/include/: battery.h  config.h  display.h  gnss.h  input.h  sensors.h  ui_common.h
main/ui/: ui_bike_computer.cpp  ui_bike_computer.h  ui_common.h  ui_gnss_info.cpp  ui_gnss_info.h  ui_gps_logger.cpp  ui_gps_logger.h  ui_manager.cpp  ui_manager.h  ui_pbox.cpp  ui_pbox.h  ui_settings.cpp  ui_settings.h  ui_statusbar.cpp  ui_statusbar.h
main/utils/: diagnostics.cpp  diagnostics.h
