idf_component_register(
    SRCS 
        "main.cpp"
        "hardware/display_driver.cpp"
        "hardware/imu_driver.cpp"
        "hardware/mag_driver.cpp"
        "hardware/baro_driver.cpp"
        "hardware/gnss_driver.cpp"
        "hardware/sdcard_driver.cpp"
        "hardware/encoder_driver.cpp"
        "hardware/battery_monitor.cpp"
        "core/sensor_fusion.cpp"
        "core/gps_logger.cpp"
        "core/calibration.cpp"
        "core/rtc_manager.cpp"
        "ui/ui_manager.cpp"
        "ui/ui_statusbar.cpp"
        "ui/ui_bike_computer.cpp"
        "ui/ui_pbox.cpp"
        "ui/ui_gps_logger.cpp"
        "ui/ui_gnss_info.cpp"
        "ui/ui_settings.cpp"
        "app/bike_computer_app.cpp"
        "app/pbox_app.cpp"
        "app/gps_logger_app.cpp"
        "utils/diagnostics.cpp"
    INCLUDE_DIRS 
        "."
        "hardware"
        "core"
        "ui"
        "app"
        "utils"
    REQUIRES 
        driver
        esp_timer
        nvs_flash
        sdmmc
        fatfs
        esp_adc
)
